[gd_scene load_steps=14 format=2]

[ext_resource path="res://script/home.gd" type="Script" id=1]
[ext_resource path="res://asset/background.png" type="Texture" id=2]
[ext_resource path="res://asset/ui/btn_white_long.png" type="Texture" id=3]
[ext_resource path="res://asset/ui/btn_white_long_hover.png" type="Texture" id=4]
[ext_resource path="res://asset/font/Magra-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://asset/logo.png" type="Texture" id=6]
[ext_resource path="res://asset/ui/menu_box.png" type="Texture" id=7]
[ext_resource path="res://asset/font/Magra-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://asset/ui/btn_box_close.png" type="Texture" id=9]
[ext_resource path="res://scene/tutorial.tscn" type="PackedScene" id=10]
[ext_resource path="res://scene/fade.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 3
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 8 )

[node name="homescreen" type="Node"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.5
margin_top = -344.0
margin_right = 124.5
custom_constants/separation = 30

[node name="Game" type="TextureButton" parent="menu"]
editor/display_folded = true
margin_right = 249.0
margin_bottom = 72.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="menu/Game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -22.0
margin_right = 115.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game"
align = 1
autowrap = true
uppercase = true

[node name="Materi" type="TextureButton" parent="menu"]
editor/display_folded = true
visible = false
margin_top = 102.0
margin_right = 249.0
margin_bottom = 174.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label2" type="Label" parent="menu/Materi"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -17.5
margin_right = 65.0
margin_bottom = 17.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Materi"
align = 1
autowrap = true
uppercase = true

[node name="Tutorial" type="TextureButton" parent="menu"]
editor/display_folded = true
margin_top = 102.0
margin_right = 249.0
margin_bottom = 174.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label2" type="Label" parent="menu/Tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.5
margin_top = -17.5
margin_right = 70.5
margin_bottom = 17.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tutorial"
align = 1
autowrap = true
uppercase = true

[node name="About" type="TextureButton" parent="menu"]
editor/display_folded = true
margin_top = 204.0
margin_right = 249.0
margin_bottom = 276.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label2" type="Label" parent="menu/About"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.5
margin_top = -17.5
margin_right = 70.5
margin_bottom = 17.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tentang"
align = 1
autowrap = true
uppercase = true

[node name="logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.5
margin_top = 65.0
margin_right = 102.5
margin_bottom = 195.0
texture = ExtResource( 6 )

[node name="tentang" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="overlay" type="ColorRect" parent="tentang"]
margin_right = 482.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0.694118 )

[node name="pop" type="TextureRect" parent="tentang"]
margin_left = 53.0
margin_top = 245.0
margin_right = 438.0
margin_bottom = 654.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 7

[node name="title" type="Label" parent="tentang"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 116.688
margin_top = 233.77
margin_right = 346.688
margin_bottom = 277.77
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.537255, 0, 1 )
text = "Tentang"
align = 1
autowrap = true
uppercase = true

[node name="Label" type="RichTextLabel" parent="tentang"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 57.0
margin_top = 297.0
margin_right = 391.0
margin_bottom = 611.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "DNA Assemble merupakan permainan berbasis strategi-edukasi untuk meningkatkan wawasan pelajar SMA dalam memahami materi perakitan DNA pada mata pelajaran Biologi.

Adapun aplikasi permainan ini dapat terbentuk atas dukungan pihak terkait:
Project Sponsor:
- Nurhayati (180210103056)
- Balkis Yuliar Tilamsari (180210103087)
- Siti Nur Khofifah (180210103089)
- A'ilda Pramudya (180210103063)
Game Dev Studio (Tape Soft):
- Hartawan Bahari Mulyadi
- Muhammad Amri Zaman "

[node name="close" type="TextureButton" parent="tentang"]
margin_left = 392.55
margin_top = 255.85
margin_right = 422.55
margin_bottom = 287.85
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 4

[node name="kesulitan" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="overlay" type="ColorRect" parent="kesulitan"]
margin_right = 482.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0.694118 )

[node name="pop" type="TextureRect" parent="kesulitan"]
margin_left = 53.0
margin_top = 245.0
margin_right = 438.0
margin_bottom = 716.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 7

[node name="title" type="Label" parent="kesulitan"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 57.0
margin_top = 234.0
margin_right = 385.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.537255, 0, 1 )
text = "Tingkat Kesulitan"
align = 1
autowrap = true
uppercase = true

[node name="close" type="TextureButton" parent="kesulitan"]
margin_left = 392.55
margin_top = 255.85
margin_right = 422.55
margin_bottom = 287.85
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 4

[node name="container" type="VBoxContainer" parent="kesulitan"]
margin_left = 123.0
margin_top = 333.0
margin_right = 372.0
margin_bottom = 645.0
custom_constants/separation = 8
alignment = 1

[node name="mudah" type="TextureButton" parent="kesulitan/container"]
margin_right = 249.0
margin_bottom = 72.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="kesulitan/container/mudah"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -22.0
margin_right = 115.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mudah"
align = 1
autowrap = true
uppercase = true

[node name="sedang" type="TextureButton" parent="kesulitan/container"]
editor/display_folded = true
margin_top = 80.0
margin_right = 249.0
margin_bottom = 152.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="kesulitan/container/sedang"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -22.0
margin_right = 115.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sedang"
align = 1
autowrap = true
uppercase = true

[node name="sulit" type="TextureButton" parent="kesulitan/container"]
editor/display_folded = true
margin_top = 160.0
margin_right = 249.0
margin_bottom = 232.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="kesulitan/container/sulit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -22.0
margin_right = 115.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sulit"
align = 1
autowrap = true
uppercase = true

[node name="tak_hingga" type="TextureButton" parent="kesulitan/container"]
editor/display_folded = true
margin_top = 240.0
margin_right = 249.0
margin_bottom = 312.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="kesulitan/container/tak_hingga"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -22.0
margin_right = 115.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tak Hingga"
align = 1
autowrap = true
uppercase = true

[node name="tutorial" parent="." instance=ExtResource( 10 )]
visible = false

[node name="fade" parent="." instance=ExtResource( 11 )]
[connection signal="pressed" from="menu/Game" to="." method="_on_Game_pressed"]
[connection signal="pressed" from="menu/Materi" to="." method="_on_Materi_pressed"]
[connection signal="pressed" from="menu/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="menu/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="tentang/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="kesulitan/close" to="." method="_on_kesulitan_close_pressed"]
[connection signal="pressed" from="kesulitan/container/mudah" to="." method="_on_level_mudah_pressed"]
[connection signal="pressed" from="kesulitan/container/sedang" to="." method="_on_level_sedang_pressed"]
[connection signal="pressed" from="kesulitan/container/sulit" to="." method="_on_level_sulit_pressed"]
[connection signal="pressed" from="kesulitan/container/tak_hingga" to="." method="_on_level_tak_hingga_pressed"]
[connection signal="close_btn" from="tutorial" to="." method="_on_tutorial_close_btn"]
[connection signal="fade_finished" from="fade" to="." method="_on_fade_fade_finished"]
